# trackie

./: .codecov.yml  .editorconfig  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/media/: create-gif.sh  terminal-session.cast  terminal-session.tape  terminal-session.yml
.github/workflows/: build-gif.yml  editor-config.yml  release.yml  rust.yml
benches/: perf_test.rs
doc/: trackie.1
src/: cli.rs  lib.rs  log_analyzer.rs  main.rs  persistence.rs  pretty_string.rs  report_creator.rs  time_log.rs
tests/: cli-tests.rs
