[package]
name = "trackie"
version = "0.1.0"
authors = ["beatbrot <loy.christoph@gmail.com>"]
edition = "2018"

readme = "README.md"
repository = "https://github.com/beatbrot/trackie"
license = "Apache-2.0"

description = "⏳ trackie is a private, daemon-less time tracker running in your CLI."
keywords = ["time-tracking", "tracking", "cli", "command-line", "project-management"]
categories = ["command-line-utilities", "visualization"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
dirs = "3"
colored = "2"

[dev-dependencies]
spectral = "0.6.0"

[profile.release]
lto = true
codegen-units = 1