[package]
name = "trackie"
version = "0.1.0"
authors = ["beatbrot <loy.christoph@gmail.com>"]
edition = "2018"

readme = "README.md"
repository = "https://github.com/beatbrot/trackie"
license = "Apache-2.0"

description = "⏳ trackie is a private, daemon-less time tracker running in your CLI."
keywords = ["time-tracking", "tracking", "cli", "command-line", "project-management"]
categories = ["command-line-utilities", "visualization"]


[package.metadata.release]
allow-branch = ["master"]
no-dev-version = true
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
    { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}" },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/predicates-rs/compare/{{tag_name}}...HEAD", exactly = 1 },
]

[dependencies]
clap = "3.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "3"
colored = "2"

[dev-dependencies]
assert_cmd = "2"
rand = "0.8"
predicates = "2"
bencher = "0.1"

[[bench]]
name = "perf_test"
harness = false

[profile.release]
lto = true
codegen-units = 1
